--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,8 @@
-/* body,
-html {
-  height: 100%;
-} */
-
 html,
 html::before,
 html::after {
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 html *,
@@ -16,46 +12,15 @@ html *::after {
 }
 
 #root {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   height: 100%;
   min-height: 100vh;
-  background: rgba(32, 61, 227, 1);
-  background: -moz-radial-gradient(
-    center,
-    ellipse cover,
-    rgba(32, 61, 227, 1) 0%,
-    rgba(10, 38, 69, 1) 100%
-  );
-  background: -webkit-gradient(
-    radial,
-    center center,
-    0px,
-    center center,
-    100%,
-    color-stop(0%, rgba(32, 61, 227, 1)),
-    color-stop(100%, rgba(10, 38, 69, 1))
-  );
-  background: -webkit-radial-gradient(
-    center,
-    ellipse cover,
-    rgba(32, 61, 227, 1) 0%,
-    rgba(10, 38, 69, 1) 100%
-  );
-  background: -o-radial-gradient(
-    center,
-    ellipse cover,
-    rgba(32, 61, 227, 1) 0%,
-    rgba(10, 38, 69, 1) 100%
-  );
-  background: -ms-radial-gradient(
-    center,
-    ellipse cover,
-    rgba(32, 61, 227, 1) 0%,
-    rgba(10, 38, 69, 1) 100%
-  );
   background: radial-gradient(
     ellipse at center,
     rgba(32, 61, 227, 1) 0%,
     rgba(10, 38, 69, 1) 100%
   );
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#203de3', endColorstr='#0a2645', GradientType=1 );
 }
